--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <br><br>
         <input type="submit" value="Generate" onclick="genQR()">
 
-        <p>Developed By <a src="https://github.com/ruethaiboon-sri/QRCodeGenerator">Ruethaiboon Srithai</a></p>
+        <p>Developed By <a href="https://github.com/ruethaiboon-sri/QRCodeGenerator">Ruethaiboon Srithai</a></p>
         
         
     </div>
